Subida de Todos mis Proyectos Web
Subida de Todos mis Proyectos Web

Renta
Carrito
Sistema pedido
Comercio

--- a/Renta_Javier/.devcontainer/Dockerfile
+++ b/Renta_Javier/.devcontainer/Dockerfile
@@ -1,52 +1,37 @@
-# Usa la imagen base de Python
 FROM python:3.10
 
-# Establece el directorio de trabajo en /app
 WORKDIR /app
 
-# Copia los archivos requirements.txt y .env al contenedor
-COPY requirements.txt ./
-COPY .env ./
+# Instalar dependencias necesarias
+RUN apt-get update && apt-get install -y libaio1 wget unzip
 
-# Copia todo el contenido del proyecto en el directorio de trabajo del contenedor
-COPY ../ ./
+# Descargar e instalar Oracle Instant Client
+RUN mkdir -p /opt/oracle && \
+    wget https://download.oracle.com/otn_software/linux/instantclient/219000/instantclient-basiclite-linux.x64-21.9.0.0.0dbru.zip && \
+    wget https://download.oracle.com/otn_software/linux/instantclient/219000/instantclient-sqlplus-linux.x64-21.9.0.0.0dbru.zip && \
+    unzip instantclient-basiclite-linux.x64-21.9.0.0.0dbru.zip -d /opt/oracle && \
+    unzip instantclient-sqlplus-linux.x64-21.9.0.0.0dbru.zip -d /opt/oracle && \
+    rm -f instantclient-basiclite-linux.x64-21.9.0.0.0dbru.zip instantclient-sqlplus-linux.x64-21.9.0.0.0dbru.zip && \
+    sh -c "echo /opt/oracle/instantclient_21_9 > /etc/ld.so.conf.d/oracle-instantclient.conf" && \
+    ldconfig
 
-# Instala las dependencias del sistema
-RUN apt-get update && apt-get install -y \
-    wget \
-    unzip \
-    libaio1 \
-    iputils-ping \
-    && rm -rf /var/lib/apt/lists/*
+# Configurar variables de entorno para Oracle
+ENV LD_LIBRARY_PATH=/opt/oracle/instantclient_21_9
+ENV PATH=$PATH:/opt/oracle/instantclient_21_9
 
-# Actualiza pip
-RUN pip install --upgrade pip
-
-# Descarga e instala Oracle Instant Client y SQL*Plus
-RUN wget https://download.oracle.com/otn_software/linux/instantclient/2340000/instantclient-basic-linux.x64-23.4.0.24.05.zip \
-    && wget https://download.oracle.com/otn_software/linux/instantclient/2340000/instantclient-sqlplus-linux.x64-23.4.0.24.05.zip \
-    && mkdir -p /opt/oracle \
-    && unzip -o instantclient-basic-linux.x64-23.4.0.24.05.zip -d /opt/oracle \
-    && unzip -o instantclient-sqlplus-linux.x64-23.4.0.24.05.zip -d /opt/oracle \
-    && rm instantclient-basic-linux.x64-23.4.0.24.05.zip instantclient-sqlplus-linux.x64-23.4.0.24.05.zip \
-    && ln -sf /opt/oracle/instantclient_23_4/libclntsh.so.23.1 /opt/oracle/instantclient_23_4/libclntsh.so \
-    && ln -sf /opt/oracle/instantclient_23_4/sqlplus /usr/bin/sqlplus
-
-# Establece las variables de entorno para Oracle Instant Client
-ENV LD_LIBRARY_PATH=/opt/oracle/instantclient_23_4 
-ENV PATH=/opt/oracle/instantclient_23_4:$PATH
-
-# Instala las dependencias de Python
+# Copiar requirements.txt y instalar dependencias
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Crea el usuario vscode y establece los permisos adecuados
-RUN useradd -ms /bin/bash vscode && chown -R vscode:vscode /app
+# Copiar los scripts de espera
+COPY wait-for-it.sh /wait-for-it.sh
+RUN chmod +x /wait-for-it.sh
 
-# Establece el usuario vscode para ejecutar comandos
-USER vscode
+COPY wait-for-oracle.sh /wait-for-oracle.sh
+RUN chmod +x /wait-for-oracle.sh
 
-# Expone el puerto 8000 para el servicio (puerto estándar de desarrollo de Django)
-EXPOSE 8000
+# Copiar el resto del código
+COPY . .
 
-# Comando por defecto para ejecutar la aplicación (en el servidor de desarrollo de Django)
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+# Comando por defecto
+# CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
