--- a/Renta_Javier/requirements.txt
+++ b/Renta_Javier/requirements.txt
@@ -1,33 +1,11 @@
 asgiref==3.4.1
-autopep8==1.6.0
-awsebcli==3.20.10
-botocore==1.31.85
-cement==2.8.2
-certifi==2024.6.2
-cffi==1.16.0
-charset-normalizer==3.3.2
-colorama==0.4.3
-cryptography==42.0.8
-cx_Oracle==8.3.0
 Django==4.0
-idna==3.7
-jmespath==1.0.1
-oracledb==2.2.1
-pathspec==0.10.1
-pycodestyle==2.8.0
-pycparser==2.22
-pypiwin32==223  # Comentado para compatibilidad multiplataforma
-python-dateutil==2.9.0.post0
-pywin32==306  # Comentado para compatibilidad multiplataforma
-PyYAML==6.0.1
-requests==2.32.3
-semantic-version==2.8.5
-setuptools==70.0.0
-six==1.16.0
+cx_Oracle==8.3.0
+oracledb==1.3.1
+python-dotenv==0.19.2
+pytz==2024.1
 sqlparse==0.4.2
-termcolor==1.1.0
-toml==0.10.2
-tzdata==2021.5
-urllib3==1.26.18
-wcwidth==0.1.9
-python-dotenv
+Pillow==10.2.0
+django-crispy-forms==2.0
+gunicorn==20.1.0
+whitenoise==6.6.0
